resilient/tests/it/snapshots/it__diagnostics_snapshots__parser_match_missing_fat_arrow@parser_match_missing_fat_arrow.snap
---
source: tests/diagnostics_snapshots.rs
description: "fn main(int _d) { return match 1 { 1 2 }; } main(0);\n"
expression: output
---
Parser error: 1:38: Expected '=>' after match pattern, found integer literal `2`
1:38: Expected '=>' after match pattern, found integer literal `2`
Parser error: Expected '=>' after match pattern, found integer literal `2`
   fn main(int _d) { return match 1 { 1 2 }; } main(0);
                                        ^
Error: Failed to parse program: 1 parser error(s)
